Fix select inside dialog Fix scrollbar style Minor css fix

--- a/src/css/_scrollbar.scss
+++ b/src/css/_scrollbar.scss
@@ -1,5 +1,6 @@
-body {
-  overflow: overlay;
+body,
+.scroll {
+  overflow: overlay !important;
 
   &::-webkit-scrollbar {
     width: 21px;
